---
source: analyzer/tests/errors.rs
expression: errstr

---
error: literal out of range for `u32`
  ┌─ tests/fixtures/errors/numeric_capacity_mismatch/u32_neg.fe:3:20
  │
3 │         return u32(-1)
  │                    ^^ does not fit into type `u32`


